--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -21,7 +21,7 @@
     -->
     <!-- to add fontawesome icons -->
     <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
-    <title>Self-ish</title>
+    <title>ClonestaGram</title>
   </head>
   <body>
     <noscript>
